--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@ display: flex;
   background-color: orange;
   height: 100vh;
   
-  max-width: 80%;
+  /* max-width: 80%; */
   margin: 0 auto;
 }
 /* 
