--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@ display: flex;
   align-items: normal;
   align-content: normal;
   
-  background-color: orange;
+  background-color: blue;
   height: 100vh;
   
   /* max-width: 80%; */
