--- a/app/globals.css
+++ b/app/globals.css
@@ -120,6 +120,22 @@ display: flex;
   background-color: #ffff00;
 }
 
+.button-item{
+  /* display: block; */
+  display: flex;
+    flex-direction: column;
+    /* flex-wrap: nowrap; */
+    /* justify-content: center; */
+    align-items: center;
+    /* align-content: normal; */
+}
+
+.button-item button {
+  margin: 0.4em;
+  padding: 40px;
+}
+
+
 .answers-view li{
   margin: 20px 10px;
   padding: 10px;
