--- a/app/globals.css
+++ b/app/globals.css
@@ -37,8 +37,9 @@ display: flex;
   align-items: normal;
   align-content: normal;
   
-  background-color: blue;
-  background-color: orange;
+  /* background-color: blue; */
+  /* background-color: orange; */
+  /* handles the safari addressbar issue */
   height: 100svh;
   
   /* max-width: 80%; */
