--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 	height: 100svh;
 
 	margin: 0 auto;
+  
 
 }
 
@@ -41,6 +42,7 @@
 	padding: 10px;
 	text-align: center;
 }
+
 
 .question .main-image {
 	padding: 1em;
@@ -60,6 +62,17 @@
 	margin-top: auto;
 
 	height: 100%;
+  position: relative;
+}
+
+.subjectblock .title-answer {
+  padding: 10px;
+  text-align: center;
+  font-size: 2rem;
+  color: #4242ff;
+  position: absolute;
+  background: #ffff00eb;
+  width: 100%;
 }
 
 .subjectblock img {
@@ -86,7 +99,7 @@
 }
 
 .quizblock button:active {
-	background-color: #ffff00;
+	/* background-color: #ffff00; */
 	/* background-color: transparent; */
 }
 
@@ -119,113 +132,8 @@
 }
 
 
-.*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-* {
-	margin: 0;
-}
 
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-
-.site {
-	/* background-color: orange; */
-}
-
-.question {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: normal;
-	align-items: normal;
-	align-content: normal;
-
-	/* background-color: blue; */
-	/* background-color: orange; */
-	/* handles the safari addressbar issue */
-	height: 100svh;
-
-	margin: 0 auto;
-
-}
-
-.question .title {
-	padding: 10px;
-	text-align: center;
-}
-
-.question .main-image {
-	padding: 1em;
-}
-
-.feature-word {
-	font-size: 12rem;
-}
-
-.subjectblock {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	margin-top: auto;
-	height: 100%;
-}
-
-.subjectblock img {
-	/* width: 100%; */
-	max-width: 100%;
-}
-
-
-.quizblock {
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-
-	/* background-color: #bbdefb; */
-	/* height: 100%; */
-	padding: 0 10px 10px;
-	gap: 5px;
-
-	position: relative;
-	top: -140px;
-
-}
-
-.quizblock button:active {
-	background-color: #ffff00;
-	/* background-color: transparent; */
-}
-
-.button-item {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: center;
-	align-content: normal;
-
-	width: 20vh;
-}
-
-.button-item button {
-	width: 100%;
-	height: auto;
-	min-height: 110px;
-	border: none;
-	border-radius: 16px;
-	font-size: 1.4rem;
-	background-color: #00959e47;
-}
 
 
 .answers-view{
