--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,8 +1,11 @@
+
+
+
 #root {
-  max-width: 1280px;
+  // max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  // padding: 2rem;
+  // text-align: center;
 }
 
 .logo {
