--- a/2222/pre 2/src/App.css
+++ b/2222/pre 2/src/App.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *::before,
 *::after {
 	box-sizing: border-box;
@@ -215,4 +215,4 @@
   
   border-bottom: solid 1px #d8b0ff;
   
-}
+} */
