--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -16,6 +16,9 @@ body {
   margin: 0;
   /* display: flex; */
   /* place-items: center; */
+  
+  // might need this to fix mobile
+  // height: 100svh;
   min-width: 320px;
   min-height: 100vh;
   background-color: #fdeef7;
